force-app/main/default/objects/Nota_de_Auditoria__c/Nota_de_Auditoria__c.object-meta.xml
<CustomObject>
    <label>Nota de Auditoria</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Nombre de Nota de Auditoria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas de Auditorias</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>