force-app/main/default/objects/Nota_de_Auditoria__c/fields/Afi_ID__c.field-meta.xml
<CustomField>
    <fullName>Afi_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Afi ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notas de Auditorias</relationshipLabel>
    <relationshipName>Notas_de_Auditorias</relationshipName>
    <type>Lookup</type>
</CustomField>