force-app/main/default/objects/Nota_de_Auditoria__c/fields/APr_Id__c.field-meta.xml
<CustomField>
    <fullName>APr_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Notas de Auditorias</relationshipLabel>
    <relationshipName>Notas_de_Auditorias</relationshipName>
    <type>Lookup</type>
</CustomField>