force-app/main/default/objects/Nota_de_Auditoria__c/fields/Evento_Medico_Id__c.field-meta.xml
<CustomField>
    <fullName>Evento_Medico_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Médico</label>
    <referenceTo>Evento_medico__c</referenceTo>
    <relationshipLabel>Notas de Auditorias</relationshipLabel>
    <relationshipName>Notas_de_Auditorias</relationshipName>
    <type>Lookup</type>
</CustomField>