force-app/main/default/objects/Nota_de_Auditoria__c/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <externalId>true</externalId>
    <label>Id Nota SS</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>