force-app/main/default/objects/Nota_de_Auditoria__c/fields/Integrante__c.field-meta.xml
<CustomField>
    <fullName>Integrante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integrante</label>
    <referenceTo>Integrante_caso__c</referenceTo>
    <relationshipLabel>Notas de Auditorias</relationshipLabel>
    <relationshipName>Notas_de_Auditorias_integrante</relationshipName>
    <type>Lookup</type>
</CustomField>