force-app/main/default/objects/Nota_de_Auditoria__c/fields/Modificado_en_SS_por__c.field-meta.xml
<CustomField>
    <fullName>Modificado_en_SS_por__c</fullName>
    <label>Modificado en SS por</label>
    <type>TextArea</type>
</CustomField>