force-app/main/default/objects/Nota_de_Auditoria__c/fields/Nota__c.field-meta.xml
<CustomField>
    <fullName>Nota__c</fullName>
    <label>Nota</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>