force-app/main/default/objects/Nota_de_Auditoria__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Notas de Auditorias</relationshipLabel>
    <relationshipName>Notas_de_Auditorias</relationshipName>
    <type>Lookup</type>
</CustomField>