force-app/main/default/objects/Nota_de_Auditoria__c/fields/Tipo_Dato_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Dato_Adicional__c</fullName>
    <label>Tipo Dato Adicional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>