force-app/main/default/objects/Nota_de_Auditoria__c/fields/Tipo_de_nota__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_nota__c</fullName>
    <label>Tipo de nota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>