force-app/main/default/objects/Nota_de_Auditoria__c/fields/Tipo_nota_de_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_nota_de_Auditoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo nota de Auditoria</label>
    <referenceTo>Tipo_nota_de_auditoria__c</referenceTo>
    <relationshipLabel>Notas de Auditorias</relationshipLabel>
    <relationshipName>Notas_de_Auditorias</relationshipName>
    <type>Lookup</type>
</CustomField>