force-app/main/default/objects/Nota_de_Auditoria__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>