force-app/main/default/objects/Nota_de_Auditoria__c/recordTypes/Integrante.recordType-meta.xml
<RecordType>
    <fullName>Integrante</fullName>
    <active>true</active>
    <label>Integrante</label>
</RecordType>