force-app/main/default/objects/Nota_de_Auditoria__c/recordTypes/Ventas.recordType-meta.xml
<RecordType>
    <fullName>Ventas</fullName>
    <active>true</active>
    <label>Ventas</label>
</RecordType>