force-app/main/default/objects/Nota_de_Auditoria__c/validationRules/Bloquear_resgistro.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_resgistro</fullName>
    <active>true</active>
    <description>Al contener Id externo queda bloqueado para su modificación</description>
    <errorConditionFormula>AND(
				OR(
				   APr_Id__r.RecordType.DeveloperName =&quot;Solicitud_de_despegues&quot;,
						 APr_Id__r.RecordType.DeveloperName =&quot;Solicitud_de_alta_familiar&quot;),
				NOT(ISBLANK(PRIORVALUE(Id_Externo__c))),
				SECOND(TIMEVALUE(LastModifiedDate))+5&lt;SECOND(TIMEVALUE(NOW()))
	)</errorConditionFormula>
    <errorMessage>No se puede modificar la nota de auditoria si ya &quot;Existe en SaludSoft&quot;</errorMessage>
</ValidationRule>