force-app/main/default/objects/Nota_de_Auditoria__c/validationRules/Opp_validar_nota_vacia.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_validar_nota_vacia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Nota__c),
    ISBLANK(Id_externo_solicitudes__c),
    NOT(ISBLANK(Oportunidad__c))
)</errorConditionFormula>
    <errorDisplayField>Nota__c</errorDisplayField>
    <errorMessage>El campo Nota no puede estar vacío</errorMessage>
</ValidationRule>